<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coddi</string>
    <string name="title_section1">Contas</string>
    <string name="title_section2">Categorias</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string-array name="Sections">
        <item>Coddi</item>
        <item>Contas</item>
        <item>Categoria</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/conta</item>
        <item>@drawable/categoria</item>
        <item>@drawable/saque</item>
        <item>@drawable/deposito</item>
        <item>@drawable/transferencia</item>
        <item>@drawable/resultado</item>
    </array>

    <string name="title_section3">Configurações</string>
    <string name="action_add_categoria">+Cat</string>
    <string name="title_activity_cadastrar_categoria">+ Categoria</string>
    <string name="hello_world">Hello world!</string>
    <string name="categoria_nome">Nome</string>
    <string name="cadastrar_caterogias_titulo"></string>
    <string name="itemicon">ItemIcon</string>
    <string name="title_activity_cadastrar_conta">+ Conta</string>
    <string name="title_activity_cadastrar_pagamento">+ Pagamento</string>
    <string name="title_activity_cadastrar_saque">+ Saque</string>
    <string name="title_activity_cadastrar_transferencia">+ Transferência</string>
    <string name="title_activity_cadastrar_recebimento">+ Recebimento</string>
    <string name="title_activity_resultado">ResultadoActivity</string>
    <string name="txtMesReferencia">06/10</string>
    <string name="tvLabelReceitas">receita</string>
    <string name="txtDescReceitas">receita</string>
    <string name="txtDescDespesas">despesas</string>
    <string name="tvLabelDespesas">despesas</string>
    <string name="txtDescSaldoMes">saldo</string>
    <string name="tvLabelSaldoMes">saldo</string>

</resources>
